[gd_scene load_steps=5 format=3 uid="uid://cpq3tnc66b1wy"]

[ext_resource type="Script" uid="uid://mh6y7iun3qdy" path="res://cadastro.gd" id="1_0wm2f"]
[ext_resource type="Texture2D" uid="uid://rwpsbgom5abk" path="res://arrow back.png" id="1_6ebnh"]
[ext_resource type="Texture2D" uid="uid://bd61g6fiuwms8" path="res://minimal3.webp" id="2_risg0"]
[ext_resource type="Script" uid="uid://bnwckymgyx8ad" path="res://minimal_3.gd" id="3_kdcbx"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0wm2f")

[node name="Minimal3" type="Sprite2D" parent="."]
position = Vector2(576.5, 317)
scale = Vector2(1.89352, 1.83882)
texture = ExtResource("2_risg0")
script = ExtResource("3_kdcbx")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonCriarConta" type="Button" parent="UI"]
layout_mode = 0
offset_left = 458.0
offset_top = 495.0
offset_right = 666.0
offset_bottom = 590.0
text = "CRIAR CONTA"

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 321.0
offset_top = 78.0
offset_right = 884.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 60
text = "Tela de Cadastro"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 215.0
offset_top = 218.0
offset_right = 943.0
offset_bottom = 455.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nome do usu√°rio:             "

[node name="LineEditNome" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Insira Seu Nome de Usu√°rio"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "E-mail:                                 "

[node name="LineEditEmail" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Insira Seu E-mail"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Senha:                                 "

[node name="LineEditInsiraSenha1" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Insira Sua Senha"

[node name="ButtonVerSenha1" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "üëÅ"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Senha:                                 "

[node name="LineEditInsiraSenha2" type="LineEdit" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Confirmar Senha"

[node name="ButtonVerSenha2" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "üëÅ"

[node name="ArrowBack" type="TextureButton" parent="."]
offset_left = 110.0
offset_top = 74.0
offset_right = 622.0
offset_bottom = 586.0
scale = Vector2(0.243164, 0.200195)
texture_normal = ExtResource("1_6ebnh")

[node name="LabelMensagem" type="Label" parent="."]
offset_left = 311.0
offset_top = 47.0
offset_right = 351.0
offset_bottom = 70.0
